# ur_moveit_resources

./: .gitignore  LICENSE  README.md
ur_description/: CMakeLists.txt  README.md  package.xml
ur_description/config/ur10/: visual_parameters.yaml
ur_description/config/ur10e/: visual_parameters.yaml
ur_description/config/ur16e/: visual_parameters.yaml
ur_description/config/ur20/: visual_parameters.yaml
ur_description/config/ur3/: visual_parameters.yaml
ur_description/config/ur30/: visual_parameters.yaml
ur_description/config/ur3e/: visual_parameters.yaml
ur_description/config/ur5/: visual_parameters.yaml
ur_description/config/ur5e/: visual_parameters.yaml
ur_description/launch/: view_ur.launch.py
ur_description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
ur_description/urdf/: ur.urdf.xacro  ur_macro.xacro
ur_moveit_config/: CMakeLists.txt  package.xml
ur_moveit_config/rviz/: view_robot.rviz
ur_moveit_resources/: CMakeLists.txt  package.xml
