<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <author email="vihaan.shah@uconn.edu">Vihaan Shah</author>
  <maintainer email="vihaan.shah@uconn.edu">Vihaan Shah</maintainer>
  <name>ur_moveit_resources</name>
  <version>0.0.0</version>
  <description>
    <p>
      MoveIt Resources for working with: Universal Robots UR3.
    </p>
  </description>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_resources_ur_description</exec_depend>
  <exec_depend>moveit_resources_ur_moveit_config</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
